themes/finna2/less/finna/record.less
/* ... */
.show-details-button, .hide-details-button {
  width: 100%;
  font-size: .9em;
  color: @link-color;
  &:hover, &:focus {
    color: @link-color;
  }
}
.toggle-image-information {
  border: 0;
  font-weight: 600;
  color: @action-link-color;
  &:hover, &:focus {
    color: @action-link-color;
  }
}

.show-details
.record-details {
  margin: 10px 0px;
}
.physical-details {
  color: @gray-light;
}
.access-rights {
  color: @gray-light;
  margin-top: 5px;
  padding-top: 5px;
}
.dataTables_wrapper {
  width: 100%;
}
.part-authors-padded {
  padding-left: 10px;
}
.nickname-holder {
  margin-bottom: 5px;
}
.recordInscriptions {
  .record-inscription {
    display: block;
    margin-bottom: 7px;
  }
  .truncate-field {
    .record-inscription {
      span {
        display: block;
        > span {
            margin-bottom: 5px;
        }
      }
    }
  }
}
.record-other-screenings-region,
.record-broadcasting-info-place {
  flex-grow: 2;
}
.recordInspection {
  dt {
    font-weight: normal;
  }
}

@media(max-width:@screen-xs-max) {
  .cover-wrapper {
    text-align: center;
  }
  .template-name-view .record .record-title {
    margin-top: 10px;
  }
}

@media print {
  .template-dir-record .search-filters {
    display: none;
  }
}

.open-link, .save-record-link, .record-link {
  text-align: left;
  margin-top: 5px;
  color: @action-link-color;
  font-size: 1em;
  font-weight: 600;
  text-transform: uppercase;
  a, a span {
    color: @action-link-color;
    &:hover {
      text-decoration: none;
      color: @action-link-color;
    }
  }
  .image-dimensions {
    color: @gray-mid-light;
    font-size: .8em;
  }
}

.record .recordcover-holder {
  margin-bottom: 12px;
  .more-link {
    width: 100%;
  }
}

.recordcover-holder.paginate {
  button {
    display: none;
  }
}

@media(max-width: @screen-sm-max) {
  .large-image-sidebar {
    width: 100%;
  }
}

.related-records {
  margin-bottom: 1em;

  li.list-group-item p {
    font-weight: 600;
    text-transform: uppercase;
    margin-bottom: 0;
  }
}

#similar-records{
  .details {
    font-size: 0.9em;
    line-height: 25px;
    margin-top: -5px;
  }
}

.staff-view {
  .pace-car {
    th,td {
      border:0;
      padding:0;
    }
  }
  th {
    text-align:right;
  }
}

.nav-pills {
  padding: 0px;
  margin: 0px;
  & a:hover {
    text-decoration: none;
  }
  & > li:not(.share-buttons):not(.whatsapp) {
    margin: 10px;
    float: left;
    // Links rendered as pills
    & > a {
      border-radius: @nav-pills-border-radius;
      padding: 0px;
    }
  }
}

// QRCode in record view
.nav-pills {
  img.qrcode {
    border-radius: 8px;
    min-width: 150px;
  }
}

// Share buttons
.nav-pills > li.share-buttons {
  float: right;
  padding-top: 5px;
  .share-buttons-toolbox {
      a {
          padding-left: 5px;
          display: inline-block;
      }
  }
}

// Request forms
.ill-request-terms {
  background-color: @state-info-bg;
  padding: 2em;
  padding-left: 2.5em;
  margin-bottom: 1em;
}

// Comments
.comment-wrapper {
  background-color: lighten(@gray, 78%);
  border-radius: @border-radius-base;

  .comment-text {
    // Display line breaks properly in comments:
    white-space: pre-line;
  }
}

// Comment form
.comment-form-wrapper {
  padding: 10px;
  background-color: lighten(@gray, 78%);
  border-radius: @border-radius-base;

  .comment-form {
    .comment-info-icon {
      font-size: 1.5em;
      float: left;
      color: @brand-primary;
    }
    .comment-description {
      margin-top: 1em;
      margin-left: 2em;
    }
    @media (min-width: @screen-md) {
      .comment-info-icon {
        margin-top: 2.7em;
        margin-left: 1em;
      }
      .comment-col {
          width: 50%;
          float: left;
      }
      .comment-description {
        margin-top: 4em;
        margin-left: 4em;
      }
    }
  }
}

// Cart buttons
.cart-add, .cart-remove {
  cursor: pointer;
}

// Record Preview Form
.preview-record-form {
  #data {
    width: 100%;
    min-height: 400px;
  }
}

// Learning material record
.date-created.date-modified {
  color: @gray-light;
  font-size: 0.9em;
  margin-top: 5px;
  margin-bottom: 21px;
}
.learning-material {
  margin-top: 12px;
  h3 {
    margin-top: 0;
    margin-bottom: 6px;
    font-size: 1em;
  }
  .recordURLs {
    margin-top: 0;
    margin-bottom: 21px;
    padding: 0;
  }
  .fa-download,
  .fa-external-link,
  .fa-info3 {
    margin-right: 5px;
  }
}
.alert-aoe {
  background-color: @aoe-brand-primary;
}
.material-description {
  margin-bottom: 21px;
}

// Copyright field value, also used in search result lists
.rights-icons {
  margin-right: 10px;
  .iconlabel {
    margin-right: 0;
  }
}
.rights-text {
  color: @brand-primary;
}

// Material provided by

.recordProvidedBy {
  .record-organisation {
    img.consortium-logo {
      margin: 8px 0 12px;
    }
    li.organisation-page-link {
      padding-top: 5px;
    }
    li.material-questions-feedback {
      font-weight: bold;
      padding-top: 10px
    }
  }
  .repository-library-request {
    font-weight: bold;
    padding-top: 10px;
  }
  .repository-library-request-order {
    margin-top: 0.3em;
  }
}

.sidebar .recordProvidedBy {
  border-top: none;
  margin-top: 0px;
  .record-type.organisations {
    padding: 15px;
    font-size: 1em;
    margin-bottom: 0;
  }
  .record-organisation-box {
    border: @sidebar-border;
    margin-bottom: 1em;
  }
}

.record-main .recordProvidedBy {
  border: @sidebar-border;
  padding: 0 15px 10px 15px;
  margin-bottom: 10px;
  h2 {
    font-size: 20px;
  }
  @media (min-width: @screen-sm-min) {
    max-width: 300px;
  }
}

// Record feedback
.feedback-record {
  margin-top: 0.3em;
}

.model-details {
  .model-download {
    i {
      padding-right: 2px;
    }
  }
}
/* ... */

